@@ -68,6 +68,8 @@ $Source$
       string at the end.
     * import.php: Reenable LIMIT appending (bug #1318624).
     * sql.php: Fix appending LIMIT when there are comments.
+    * libraries/common.lib.php: Parse query before inserting LIMIT to know
+      where to place it.
 
 2005-10-07 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/check_user_privileges.lib.php: bug #1313821, dbname containing a 
